[tool.poetry]
name = "locusdb"
version = "0.1.0"
license="Apache-2.0"
description = "Local, in-memory vector database"
authors = ["Alex <46456279+the-alex-b@users.noreply.github.com>"]
readme = "README.md"
repository="https://github.com/the-alex-b/Locus"

[tool.poetry.dependencies]
python = "^3.9"
hnswlib = "^0.7.0"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
bandit = "^1.7.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
